# smart_writing_coach

./: .dockerignore  .gitignore  README.md  data_preparation.py  docker-compose.yml  essay_grader.py  finetune_bert.py  generate_feedback.py  main.py  predict_level.py  pyproject.toml  requirements.txt  streamlit_app.py  val.csv
.streamlit/: config.toml
OneDrive/Desktop/CODING/smart_writing_coach/: pyvenv.cfg
OneDrive/Desktop/CODING/smart_writing_coach/Scripts/: activate  activate.bat
backend/: .dockerignore  Dockerfile  README.md  generate_feedback.py  main.py  pyproject.toml  requirements.txt
essay_feedback/: feedback_2025-06-07_13-31-25.json  feedback_2025-06-07_13-58-18.json  feedback_2025-06-07_14-33-14.json
essay_feedback_demo/: feedback_2025-06-07_13-42-53.json  feedback_2025-06-07_13-54-08.json
frontend/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
