[project]
name = "smart-writing-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "altair==5.5.0",
    "altex==0.2.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asn1crypto==1.5.1",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "boto3==1.40.11",
    "botocore==1.40.11",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "distro==1.9.0",
    "entrypoints==0.4",
    "faker==37.5.3",
    "favicon==0.7.0",
    "filelock==3.18.0",
    "fonttools==4.59.1",
    "fsspec==2025.5.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.16.0",
    "htbuilder==0.9.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.9",
    "lxml==6.0.0",
    "markdown==3.8.2",
    "markdownlit==0.0.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.5",
    "mpmath==1.3.0",
    "narwhals==1.42.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "openai==1.84.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==6.3.0",
    "prometheus-client==0.22.1",
    "protobuf==5.29.5",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pyjwt==2.10.1",
    "pymdown-extensions==10.16.1",
    "pyopenssl==25.1.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.25.1",
    "s3transfer==0.13.1",
    "safetensors==0.5.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowflake-connector-python==3.17.1",
    "snowflake-snowpark-python==1.36.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "st-annotated-text==4.0.2",
    "st-theme==1.2.3",
    "streamlit==1.45.1",
    "streamlit-avatar==0.1.3",
    "streamlit-camera-input-live==0.2.0",
    "streamlit-card==1.0.2",
    "streamlit-embedcode==0.1.2",
    "streamlit-extras==0.7.6",
    "streamlit-faker==0.0.4",
    "streamlit-image-coordinates==0.4.0",
    "streamlit-keyup==0.3.0",
    "streamlit-notify==0.3.1",
    "streamlit-toggle-switch==1.0.2",
    "streamlit-vertical-slider==2.5.5",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "torch==2.8.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.4.0",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "wheel==0.45.1",
]
